# Home-Hub

./: .env.example  .gitignore  README.md  metadata.json  package-lock.json  package.json  server.ts
backend/: Cargo.toml
backend/migrations/: 0001_mvp.sql  0002_finance.sql  0004_pantry.sql  0005_pantry_photos.sql  0006_calendar.sql  0007_kindred.sql  rustdb_bootstrap.sql
backend/src/: compat.rs  config.rs  error.rs  main.rs  types.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  totp.rs
backend/src/db/: mod.rs
backend/src/modules/: mod.rs
backend/src/modules/calendar/: mod.rs
backend/src/modules/dashboard/: mod.rs
backend/src/modules/finance/: access.rs  bills.rs  budget.rs  mod.rs  models.rs  settings.rs  subscriptions.rs  summary.rs
backend/src/modules/households/: mod.rs
backend/src/modules/kindred/: ai.rs  media.rs  mod.rs
backend/src/modules/notifications/: mod.rs
backend/src/modules/pantry/: mod.rs
backend/src/modules/shopping/: mod.rs
backend/src/modules/tasks/: mod.rs
backend/src/ws/: broker.rs  handler.rs  mod.rs
backend/tests/: finance_routes.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/app/: App.tsx
frontend/src/components/: AppShell.tsx  Panel.tsx  ScanButton.tsx
src/: App.tsx
src/components/: AuthView.tsx  ChoresView.tsx  FamilyTreeView.tsx  HouseholdSetup.tsx  PantryView.tsx  ScheduleView.tsx
src/lib/: auth.ts  db.ts  store.ts  ws.ts
src/routes/: auth.ts  household.ts  tasks.ts
(+27 files in other folders)
