[package]
name = "household-dashboard-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.1", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.32"
http = "1.3.1"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
totp-rs = { version = "5.7.0", features = ["otpauth"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
